# Music-Generation-VAE

./: .gitignore  README.md  refs.bib  report.tex  supplement.tex  technical-specification.md
.github/workflows/: deploy_web.yml
kaggle/notebooks/: 03_plain_transformer_dev.ipynb  04_vae_dev.ipynb  05_simple_vae_dev.ipynb  06_reconstruction_loss_test.ipynb  07_latent_space_organization_v3_vs_simplev2.ipynb
ml/: README.md  pyproject.toml
ml/scripts/: ab_compare_chunks.py  export_onnx.py  generate_music.py  memmap_to_txt_dumps.py  preprocess_all.py  preprocess_dataset.py  pt_parts_to_memmap.py  run_control_eval.py  smoke_plain_transformer.py  smoke_vae_forward.py  train_plain_transformer.py  validate_artifacts.py
ml/src/musicgen/: config.py  io.py
ml/src/musicgen/analysis/: control_eval.py  latent_space_viz.py
ml/src/musicgen/inference/: generate.py  grammar.py  onnx_io.py  render_midi.py  sample.py  service.py  tokenizer.py
ml/src/musicgen/models/: __init__.py  plain_transformer.py  simple_vae.py  vae.py
ml/src/musicgen/preprocess/: attributes.py  chunking.py  export_pt.py  tokenize.py
ml/src/musicgen_tooling.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: 01_preprocessing.ipynb  02_transformer_dev.ipynb
services/inference_api/: Dockerfile  README.md  requirements.txt
services/runpod_serverless/: Dockerfile  README.md  handler.py  requirements.txt
shared/artifacts/: README.md  artifact_manifest.schema.json
web/: .npmrc  README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  (+1 more)
(+22 files in other folders)
