[project]
name = "musicgen-tooling"
version = "0.0.0"
description = "Local tooling for preprocessing + artifact validation (training runs on Kaggle)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.4,<3",
  "scikit-learn>=1.4",
  "umap-learn>=0.5.6",
  "hdbscan>=0.8.33",
  "matplotlib>=3.8",
  "seaborn>=0.13",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

